--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  font-size: 130%;
   margin-bottom: 1em;
 }
 
@@ -41,7 +42,7 @@ a:hover {
 }
 
 a:visited {
-  color: #a0a;
+  color: gray;
 }
 
 table {
