Moving resources from Wordpress site and added portfolio.

--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -29,7 +29,7 @@
               <a href="{{ BASE_PATH }}/portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
+              <a href="{{ BASE_PATH }}/archive.html">Blog Archive</a>
             </li>
           </ul>
         </div>
