--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -35,10 +35,11 @@
         </div>
       </div>
     </div>
-    <h1>{{ page.title }}</h1>
+    <div class="content">
+      <h1>{{ page.title }}</h1>
 
-    {{ content }}
-  
+      {{ content }}
+    </div>
     <div class="footer">
       <div class="contact">
         <p>
