Remove old QuickStart text. Whoops, let this slip out to production with a big ol' comment in it. Silly me.

--- a/_includes/themes/l1m5/post.html
+++ b/_includes/themes/l1m5/post.html
@@ -6,4 +6,8 @@
   {{ content }}
 </div>
 
+<div id="related">
+  <h3><a href="/tags.html#{{ page.tags }}-ref">Related Posts</a></h3>
+</div>
+
 {% include JB/comments %}
