--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -143,6 +143,16 @@ ul.posts {
 
 /*****************************************************************************/
 /*
+/* Nav
+/*
+/*****************************************************************************/
+.navbar .nav .active {
+  border-bottom: 2px solid black;
+}
+
+
+/*****************************************************************************/
+/*
 /* Content
 /*
 /*****************************************************************************/
