--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -58,7 +58,7 @@
       </div>
       <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
-          <img src="{{ ASSET_PATH }}/images/rss.png" alt="Subscribe to RSS Feed" />
+          <img src="{{ ASSET_PATH }}/images/rss.png" height="62" width="63" alt="Subscribe to RSS Feed" />
         </a>
       </div>
     </div>
