New post on Lean UX.

--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -50,6 +50,10 @@ table {
   font: 100%;
 }
 
+strong {
+  color: #555;
+}
+
 /*****************************************************************************/
 /*
 /* Home
@@ -238,4 +242,8 @@ ul.posts {
 
 .show {
   display: block;
+}
+
+.small {
+  font-size: 80%;
 }
