--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -195,6 +195,7 @@ ul.posts {
   #post code {
     border: 1px solid #ddd;
     background-color: #eef;
+    color: #777;
     font-size: 85%;
     padding: 0 .2em;
   }
