--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -9,9 +9,9 @@
           {% endif %}
   </title>
    <meta name="author" content="{{ site.author.name }}" />
+   <link type="text/plain" rel="author" href="http://benlimmer.com/humans.txt" />
    <link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
 
-   <!--<link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" />-->
    <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-journal.min.css" />
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" media="screen, projection" />
    <script>
