Add favicon. Closes #2.

--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -12,6 +12,7 @@
    <meta name="description" content="{{ page.description }}">
    {% endif %}
    <link type="text/plain" rel="author" href="http://benlimmer.com/humans.txt" />
+   <link rel="shortcut icon" href="assets/favicon.png" />
    <link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
 
    <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-journal.min.css" />
