Added CC banner.

--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -60,6 +60,9 @@
         </p>
       </div>
       <div class="rss">
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+          <img alt="Creative Commons License" style="padding-right:10px" src="http://i.creativecommons.org/l/by/4.0/88x31.png" />
+        </a>
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
           <img src="{{ ASSET_PATH }}/images/rss.png" height="62" width="63" alt="Subscribe to RSS Feed" />
         </a>
@@ -67,4 +70,3 @@
     </div>
   </div>
 </body>
-</html>
