Add Google+ Author linkback.

--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -57,6 +57,7 @@
         <p>
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
           <a href="http://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
+          <a href="https://plus.google.com/{{ site.author.googleplus }}?rel=author">google.com/{{ site.author.googleplus }}</a><br/>
         </p>
       </div>
       <div class="rss">
