--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -17,6 +17,7 @@
 
    <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-journal.min.css" />
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="{{ ASSET_PATH}}/css/pygments.css" type="text/css" />
    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
