--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -175,8 +175,13 @@ ul.posts {
 /*
 /*****************************************************************************/
 
-#post {
-
+#post .large-link {
+  margin: 40px 50px 40px 50px;
+  width: 75%;
+  text-align: center;
+  background-color: #E8E8E8;
+  padding: 20px 10px 20px 10px;
+  font-size: 1.7em;
 }
 
   /* standard */
