--- a/_includes/themes/l1m5/default.html
+++ b/_includes/themes/l1m5/default.html
@@ -25,6 +25,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-43746905-1', 'benlimmer.com');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
 </head>
