It's a really lame excuse for responsiveness. I need to pay more attention to this at some point, but now you can at least read it...

--- a/assets/themes/l1m5/css/screen.css
+++ b/assets/themes/l1m5/css/screen.css
@@ -209,6 +209,27 @@ ul.posts {
       border: none;
     }
 
+/* mobile */
+@media (max-width: 749px) {
+  #post {
+    font-size: 1.2em;
+    max-width: 600px;
+  }
+}
+
+@media only screen and (max-device-width: 667px) {
+  .site {
+    max-width: 650px;
+    font-size: 2.5em;
+    line-height: 2em;
+  }
+
+  .site li {
+    line-height: 2em;
+  }
+}
+
+
   /* terminal */
 
   #post pre.terminal {
