Move off of oldschool JB.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,21 @@
----
-theme :
-  name : l1m5
----
-{% include JB/setup %}
-{% include themes/l1m5/default.html %}
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+
+  <body>
+
+    <div class="site" itemscope itemtype="http://schema.org/Blog">
+      {% include header.html %}
+
+      <div class="page-content">
+        <div class="container">
+          {{ content }}
+        </div>
+      </div>
+
+      {% include footer.html %}
+    </div>
+  </body>
+
+</html>
