--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,9 @@
 ---
 layout: default
-type: page
 ---
-{% include JB/setup %}
-{% include themes/l1m5/page.html %}
+<div class="post">
+<h1>{{ page.title }}</h1>
+<article>
+  {{ content }}
+</article>
+</div>
