--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,9 @@
 </footer>
 
 <!-- jQuery -->
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!--<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>-->
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<!--<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>-->
