--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="post" itemscope itemType="http://schema.org/BlogPosting">
   <meta itemprop="inLanguage" content="en-US"/>
-  <h1 itemprop="headline">{{ page.title }}</h1>
+  <h1 class="headline" itemprop="headline">{{ page.title }}</h1>
   <p class="meta">
     Posted on <span itemprop="datePublished" content={{ page.date | date_to_xmlschema }}> {{ page.date | date_to_long_string }}<span> by {{ site.author.name }} <br/>
     {% if page.location %}{{ page.location }}{% endif %}
