--- a/css/custom.css
+++ b/css/custom.css
@@ -89,11 +89,17 @@ code {
   border-bottom: 1px dotted;
 }
 
-.post .related {
+.post .report-bugs {
   margin-top: 20px;
 }
 
-.post .related .pagination {
+.post .related {
+  border-top: 1px solid #d3d3d3;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.post .pagination {
   width: 100%;
 }
 
