Fix favicon and mixed content.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
     </div>
     <div class="contact col-md-3">
       <p>
-        <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
-        <a href="http://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
+        <a href="https://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
+        <a href="https://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
         {% if page.type == 'post' %}
         <a href="https://plus.google.com/{{ site.author.googleplus }}?rel=author">google.com/{{ site.author.googleplus }}</a><br/>
         {% else %}
@@ -21,7 +21,7 @@
     </div>
     <div class="rss col-md-2">
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-        <img alt="Creative Commons License" style="padding-right:10px" src="http://i.creativecommons.org/l/by/4.0/88x31.png" />
+        <img alt="Creative Commons License" style="padding-right:10px" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
       </a>
     </div>
   </div>
