--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-  <link type="text/plain" rel="author" href="http://benlimmer.com/humans.txt" />
-  <link rel="shortcut icon" href="assets/favicon.png" />
+  <link type="text/plain" rel="author" href="https://benlimmer.com/humans.txt" />
+  <link rel="shortcut icon" href="/assets/favicon.png" />
 
   <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
