--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,26 @@
   {% endif %}
   <!-- end OpenGraph -->
 
+  <!-- start Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@l1m5">
+  <meta name="twitter:creator" content="@l1m5">
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/gravatar.jpeg">
+  {% if page.title %}
+    <meta name="twitter:title" content="{{ page.title }}">
+  {% else %}
+    <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
+  {% if page.url %}
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  {% endif %}
+  {% if page.description %}
+    <meta name="twitter:description" content="{{ page.description }}">
+  {% else %}
+    <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+  <!-- end Twitter -->
+
   {% if page.date %}
     <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
     <meta content="{{ site.url }}/about/" property="article:author">
