--- a/css/custom.css
+++ b/css/custom.css
@@ -80,6 +80,11 @@ code {
   line-height: 1.618;
 }
 
+.post .little-face img {
+  margin-left: 5px;
+  width: 20px;
+}
+
 .post article {
   margin-top: 25px;
 }
