--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,11 +70,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.production_url }}/feed.xml" />
   <link type="text/plain" rel="author" href="https://benlimmer.com/humans.txt" />
   <link rel="shortcut icon" href="/assets/favicon.png" />
-
-  <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+  <script src="/js/require.js"></script>
   <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -86,6 +82,17 @@
    ga('send', 'pageview');
  </script>
  <script>
+  requirejs.config({
+    shim : {
+      "bootstrap" : { "deps" :['jquery'] }
+    },
+    paths: {
+      "jquery" : "//code.jquery.com/jquery-2.2.4.min",
+      "bootstrap" :  "//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min"
+    }
+  });
+  require(["jquery", "bootstrap"]);
+
   function loadCSS(href){
     var ss = window.document.createElement('link'),
         ref = window.document.getElementsByTagName('head')[0];
