--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <p class="meta">
     Posted on <span itemprop="datePublished" content={{ page.date | date_to_xmlschema }}> {{ page.date | date_to_long_string }}<span> by <span itemprop="author">{{ site.author.name }}</span>
     <span class='little-face' itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
-      <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' style='width: 20px;'/>
+      <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' style='width: 20px;' alt="avatar image of Ben Limmer" />
       <meta itemprop="height" content="512" />
       <meta itemprop="width" content="512" />
     </span><br/>
