Add noopener to new window links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
   <div class="report-bugs">
     <h5>Find an issue?</h5>
     Open a pull request against my blog
-    <a href='https://github.com/blimmer/benlimmer.com' target='_blank'>on GitHub</a>.
+    <a href='https://github.com/blimmer/benlimmer.com' target='_blank' rel="noopener">on GitHub</a>.
   </div>
 
   <div class="pagination">
