Remove twitter, add keybase

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     <div class="contact col-md-3">
       <p>
         <a href="https://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
-        <a href="https://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
+        <a href="https://keybase.io/{{site.author.keybase}}">keybase.io/{{ site.author.keybase }}</a><br />
       </p>
     </div>
     <div class="rss col-md-2">
