Add md5 sum to require.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,7 +72,7 @@
   <link rel="shortcut icon" href="/assets/favicon.png" />
   <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootswatch/3.4.1/journal/bootstrap.min.css" />
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
-  <script src="/js/require.js"></script>
+  <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
   <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
