Load newer bootstap / bootswatch

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,7 +70,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.production_url }}/feed.xml" />
   <link type="text/plain" rel="author" href="https://benlimmer.com/humans.txt" />
   <link rel="shortcut icon" href="/assets/favicon.png" />
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootswatch/3.4.1/journal/bootstrap.min.css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/journal/bootstrap.min.css" rel="stylesheet" integrity="sha384-0d2eTc91EqtDkt3Y50+J9rW3tCXJWw6/lDgf1QNHLlV0fadTyvcA120WPsSOlwga" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
   <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
   <script>
@@ -90,7 +90,7 @@
     },
     paths: {
       "jquery" : "//code.jquery.com/jquery-3.4.1.slim.min",
-      "bootstrap" :  "//stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min"
+      "bootstrap" :  "//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min"
     }
   });
   require(["jquery", "bootstrap"]);
