--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,9 @@
         <li class="nav-item {% if page.url == '/' %} active {% endif %}">
           <a class="nav-link" href="/">HOME</a>
         </li>
-
+        <li class="nav-item {% if current[1] == 'consulting' %} active {% endif %}">
+          <a class="nav-link" href="/consulting">CONSULTING</a>
+        </li>
         <li class="nav-item {% if current[1] == 'archive' or page.is_post %}active{% endif %}">
           <a class="nav-link" href="/archive">BLOG</a>
         </li>
