--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<div class="navbar navbar-default navbar-fixed-top">
+<!-- <div class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">{{ site.title }}</a>
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main" aria-label="toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-label="toggle navigation">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -28,4 +28,35 @@
       </ul>
     </div>
   </div>
-</div>
+</div> -->
+
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="/">{{ site.title }}</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbar-toggler"
+      aria-controls="navbar-toggler"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar-toggler">
+      {% assign current = page.url | downcase | split: '/' %}
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item {% if current[1] == 'index' %} active {% endif %}">
+          <a class="nav-link" href="/">HOME</a>
+        </li>
+        <li
+          class="nav-item {% if current[1] == 'archive' or page.is_post %}active{% endif %}"
+        >
+          <a class="nav-link" href="/archive">BLOG</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
