--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="footer container">
-  <hr>
-  <div class="row">
-    <div class="contact col-md-offset-1 col-md-5" itemscope itemprop="author" itemtype="http://schema.org/Person">
+  <hr />
+  <div class="row justify-content-center">
+    <div class="contact1 col-md-5" itemscope itemprop="author" itemtype="http://schema.org/Person">
       <p>
         <span itemprop="name">{{ site.author.name }}</span><br />
         <span itemprop="jobtitle">{{ site.tagline }}</span><br />
-        <span itemprop="email"><a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a></span>
+        <span itemprop="email"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></span>
       </p>
     </div>
     <div class="contact col-md-3">
@@ -16,7 +16,11 @@
     </div>
     <div class="rss col-md-2">
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-        <img alt="Creative Commons License" style="padding-right:10px" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
+        <img
+          alt="Creative Commons License"
+          style="padding-right:10px"
+          src="https://i.creativecommons.org/l/by/4.0/88x31.png"
+        />
       </a>
     </div>
   </div>
