--- a/_css/custom.css
+++ b/_css/custom.css
@@ -146,15 +146,15 @@ footer hr {
 /* from http://stackoverflow.com/a/23393920 */
 
 .highlight pre code * {
-  white-space: nowrap; // this sets all children inside to nowrap
+  white-space: nowrap;
 }
 
 .highlight pre {
-  overflow-x: auto; // this sets the scrolling in x
+  overflow-x: auto;
 }
 
 .highlight pre code {
-  white-space: pre; // forces <code> to respect <pre> formatting
+  white-space: pre;
 }
 
 /*
